--- a/projects/templates/projects/all_projects.html
+++ b/projects/templates/projects/all_projects.html
@@ -1,13 +1,9 @@
+{% extends 'projects/base.html' %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
+
+{% block content %}
+
   <div class="container">
     <h1>Projects</h1>
     <div class="row">
@@ -25,5 +21,5 @@
     {% endfor %}
     </div>
   </div>
-</body>
-</html>
+
+{% endblock %}
