--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,16 +1,12 @@
+{% extends 'projects/base.html' %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width={device-width}, initial-scale=1.0">
-  <title>{{ project.title }}</title>
-</head>
-<body>
+
+{% block content %}
+
   <img src="{% static project.image %}" alt="">
   <h1>{{ project.title }}</h1>
   <p>{{ project.description }}</p>
   <p>{{ project.technology }}</p>
-</body>
-</html>
+  
+{% endblock %}
