--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -3,10 +3,17 @@
 {% load static %}
 
 {% block content %}
-
-  <img src="{% static project.image %}" alt="">
   <h1>{{ project.title }}</h1>
-  <p>{{ project.description }}</p>
-  <p>{{ project.technology }}</p>
-  
+  <div class="row">
+    <div class="col-md-8">
+      <img src="{% static project.image %}" alt="{{ project.description }}" width="100%">
+    </div>
+    <div class="col-md-4">
+      <h5>About the project</h5>
+      <p>{{ project.description }}</p>
+      <h5>Built with:</h5>
+      <p>{{ project.technology }}</p>
+    </div>
+  </div>
+
 {% endblock %}
